--- a/Website/index.html
+++ b/Website/index.html
@@ -5,104 +5,199 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Congress Tweets Analysis</title>
-  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;700&display=swap" rel="stylesheet">
   <style>
-    body {
+    :root {
+      --bg: #10131a;
+      --card-bg: #181c25;
+      --accent: #3b82f6;
+      --accent-light: #60a5fa;
+      --text: #f4f4f4;
+      --muted: #b3b9c9;
+      --border: #23283a;
+      --shadow: 0 4px 24px 0 rgba(30, 41, 59, 0.18);
+    }
+
+    html, body {
       margin: 0;
+      padding: 0;
+      background: var(--bg);
+      color: var(--text);
       font-family: 'Manrope', sans-serif;
-      background-color: #111;
-      color: #f4f4f4;
-      line-height: 1.7;
       font-weight: 300;
+      line-height: 1.7;
+      scroll-behavior: smooth;
     }
 
     header {
-      background-color: #000;
-      padding: 3rem 2rem;
+      background: linear-gradient(90deg, #1e293b 0%, #3b82f6 100%);
+      padding: 3.5rem 2rem 2.5rem 2rem;
       text-align: center;
-      border-bottom: 1px solid #333;
+      border-bottom: 1px solid var(--border);
+      box-shadow: var(--shadow);
+      animation: fadeInDown 1s cubic-bezier(.4,0,.2,1);
+    }
+
+    @keyframes fadeInDown {
+      from { opacity: 0; transform: translateY(-40px);}
+      to { opacity: 1; transform: translateY(0);}
     }
 
     header h1 {
-      font-size: 2.8rem;
+      font-size: 3rem;
       margin-bottom: 1rem;
       color: #fff;
-      font-weight: 400;
+      font-weight: 700;
+      letter-spacing: -1px;
+      animation: popIn 1.2s cubic-bezier(.4,0,.2,1);
+    }
+
+    @keyframes popIn {
+      0% { opacity: 0; transform: scale(0.95);}
+      80% { opacity: 1; transform: scale(1.03);}
+      100% { opacity: 1; transform: scale(1);}
     }
 
     header p {
-      font-size: 1.2rem;
-      color: #ccc;
+      font-size: 1.25rem;
+      color: var(--muted);
       max-width: 700px;
       margin: 0 auto;
-      font-weight: 300;
+      font-weight: 400;
+      letter-spacing: 0.2px;
     }
 
-    section {
-      padding: 3rem 2rem;
-      max-width: 900px;
-      margin: auto;
+    main {
+      max-width: 950px;
+      margin: 2.5rem auto;
+      padding: 0 1.5rem;
+      display: flex;
+      flex-direction: column;
+      gap: 2.5rem;
+    }
+
+    .card {
+      background: var(--card-bg);
+      border-radius: 18px;
+      box-shadow: var(--shadow);
+      padding: 2.2rem 2rem;
+      margin-bottom: 0.5rem;
+      border: 1px solid var(--border);
+      animation: fadeIn 1.2s cubic-bezier(.4,0,.2,1);
+      opacity: 0;
+      transform: translateY(30px);
+      animation-fill-mode: forwards;
+    }
+    .card:nth-child(1) { animation-delay: 0.2s;}
+    .card:nth-child(2) { animation-delay: 0.4s;}
+    .card:nth-child(3) { animation-delay: 0.6s;}
+    .card:nth-child(4) { animation-delay: 0.8s;}
+    .card:nth-child(5) { animation-delay: 1s;}
+    .card:nth-child(6) { animation-delay: 1.2s;}
+
+    @keyframes fadeIn {
+      to { opacity: 1; transform: none;}
     }
 
     h2 {
-      color: #ffffff;
-      font-size: 1.8rem;
-      border-bottom: 1px solid #333;
-      padding-bottom: 0.5rem;
-      margin-top: 3rem;
+      color: var(--accent);
+      font-size: 1.6rem;
+      font-weight: 700;
+      margin-top: 0;
+      margin-bottom: 1.1rem;
+      letter-spacing: -0.5px;
+      border-left: 4px solid var(--accent);
+      padding-left: 0.7rem;
+    }
+
+    ul, p {
+      color: var(--text);
+      font-size: 1.08rem;
+      margin-bottom: 1.1rem;
+    }
+
+    ul {
+      padding-left: 1.2rem;
+    }
+
+    ul li {
+      margin-bottom: 0.5rem;
       font-weight: 400;
+      line-height: 1.6;
     }
 
     a {
-      color: #ffffff;
+      color: var(--accent-light);
+      text-decoration: none;
+      transition: color 0.2s;
+      font-weight: 500;
+    }
+    a:hover {
+      color: var(--accent);
       text-decoration: underline;
     }
 
     .download-button {
       display: inline-block;
-      margin-top: 1rem;
-      padding: 0.75rem 1.5rem;
-      background-color: #fff;
-      color: #000;
+      margin-top: 1.2rem;
+      padding: 0.85rem 2.1rem;
+      background: linear-gradient(90deg, var(--accent) 60%, var(--accent-light) 100%);
+      color: #fff;
       text-decoration: none;
-      border-radius: 6px;
-      font-weight: 500;
-      transition: background-color 0.3s ease;
+      border-radius: 8px;
+      font-weight: 700;
+      font-size: 1.1rem;
+      letter-spacing: 0.5px;
+      box-shadow: 0 2px 12px 0 rgba(59,130,246,0.13);
+      border: none;
+      transition: background 0.2s, transform 0.15s;
+      cursor: pointer;
+      outline: none;
+      animation: fadeIn 1.4s cubic-bezier(.4,0,.2,1) 1.2s both;
     }
-
     .download-button:hover {
-      background-color: #ddd;
+      background: linear-gradient(90deg, var(--accent-light) 60%, var(--accent) 100%);
+      transform: translateY(-2px) scale(1.04);
     }
 
     .viz-container {
       text-align: center;
-      margin-top: 2rem;
+      margin-top: 1.5rem;
     }
 
-    iframe {
+    .viz-container img {
       width: 100%;
-      height: 500px;
-      border: 1px solid #444;
-      border-radius: 10px;
+      max-width: 900px;
+      border-radius: 14px;
+      box-shadow: 0 2px 24px 0 rgba(59,130,246,0.10);
+      margin: 2rem auto 0 auto;
+      display: block;
+      border: 1.5px solid var(--border);
+      animation: fadeIn 1.2s cubic-bezier(.4,0,.2,1) 1.1s both;
     }
 
     .notebook-preview {
-      background-color: #1a1a1a;
-      border: 1px solid #333;
-      padding: 1.5rem;
-      border-radius: 10px;
-      margin-top: 1rem;
+      background: #151922;
+      border: 1px solid var(--border);
+      padding: 1.5rem 1.2rem;
+      border-radius: 12px;
+      margin-top: 1.2rem;
+      box-shadow: 0 2px 12px 0 rgba(30,41,59,0.10);
+      animation: fadeIn 1.2s cubic-bezier(.4,0,.2,1) 1.3s both;
     }
 
     .notebook-preview h3 {
       margin-top: 0;
-      color: #fff;
-      font-weight: 400;
+      color: var(--accent);
+      font-weight: 700;
+      font-size: 1.18rem;
     }
 
-    ul li {
-      margin-bottom: 0.5rem;
-      font-weight: 300;
+    @media (max-width: 700px) {
+      header h1 { font-size: 2.1rem;}
+      main { padding: 0 0.5rem;}
+      .card { padding: 1.2rem 0.7rem;}
+      .viz-container img { max-width: 100%;}
     }
   </style>
 </head>
@@ -113,69 +208,76 @@
     <p>Exploring Political Discourse on Twitter from 2017 to 2023</p>
   </header>
 
-  <section>
-    <h2>What is the idea?</h2>
-    <p>
-      We analyze tweets from U.S. Congress members over a 6-year period to understand communication patterns, partisan framing, and topic trends. By treating individual Congress members as nodes and shared topics or interactions as edges, we can explore how discourse spreads and polarizes over time.
-    </p>
+  <main>
+    <section class="card">
+      <h2>What is the idea?</h2>
+      <p>
+        We analyze tweets from U.S. Congress members over a 6-year period to understand communication patterns, partisan framing, and topic trends. By treating individual Congress members as nodes and shared topics or interactions as edges, we can explore how discourse spreads and polarizes over time.
+      </p>
+    </section>
 
-    <h2>Goal for End User's Experience</h2>
-    <ul>
-      <li><strong>Interactive Visualization:</strong> A network of Congress members linked by shared topics or hashtags.</li>
-      <li><strong>Insights:</strong> Track how political language and framing evolve around key events like elections or crises.</li>
-      <li><strong>Actionable Outputs:</strong> Identify polarization patterns, party alignment clusters, and communication strategy shifts.</li>
-    </ul>
+    <section class="card">
+      <h2>Goal for End User's Experience</h2>
+      <ul>
+        <li><strong>Interactive Visualization:</strong> A network of Congress members linked by shared topics or hashtags.</li>
+        <li><strong>Insights:</strong> Track how political language and framing evolve around key events like elections or crises.</li>
+        <li><strong>Actionable Outputs:</strong> Identify polarization patterns, party alignment clusters, and communication strategy shifts.</li>
+      </ul>
+    </section>
 
-    <h2>Data Sources</h2>
-    <ul>
-      <li><strong><a href="https://github.com/alexlitel/congresstweets" target="_blank">CongressTweets (GitHub)</a></strong>: Daily JSON files from June 2017 to July 2023</li>
-    </ul>
-    <p>
-      This dataset was selected because of its completeness and daily granularity. It spans <strong>2,197 JSON files</strong>, totaling over <strong>5 million tweets</strong> from verified Congressional accounts. Each tweet includes metadata such as time, text, user, and source.
-    </p>
+    <section class="card">
+      <h2>Data Sources</h2>
+      <ul>
+        <li><strong><a href="https://github.com/alexlitel/congresstweets" target="_blank">CongressTweets (GitHub)</a></strong>: Daily JSON files from June 2017 to July 2023</li>
+      </ul>
+      <p>
+        This dataset was selected because of its completeness and daily granularity. It spans <strong>2,197 JSON files</strong>, totaling over <strong>5 million tweets</strong> from verified Congressional accounts. Each tweet includes metadata such as time, text, user, and source.
+      </p>
+      <a class="download-button" href="https://github.com/alexlitel/congresstweets" target="_blank">View Dataset</a>
+    </section>
 
-    <h2>Network & Text Integration</h2>
-    <p>
-      Congress members are represented as nodes. Edges are drawn based on co-occurrence of hashtags, topics, or sentiment similarity. NLP techniques like topic modeling and stance detection are used to extract themes and tone, allowing us to visualize discourse dynamics over time.
-    </p>
+    <section class="card">
+      <h2>Network & Text Integration</h2>
+      <p>
+        Congress members are represented as nodes. Edges are drawn based on co-occurrence of hashtags, topics, or sentiment similarity. NLP techniques like topic modeling and stance detection are used to extract themes and tone, allowing us to visualize discourse dynamics over time.
+      </p>
+    </section>
 
-    <div class="viz-container">
+    <section class="card viz-container">
       <h2>Sample Visualization</h2>
       <p style="margin-bottom: 1rem;">
         A prototype below shows Congress members clustered by political similarity in tweet content. Hover to explore individual accounts and major topics.
       </p>
-      <img src=""
-           alt="Congress Member Network"
-           style="width: 100%; max-width: 1000px; border-radius: 12px; display: block; margin: 2rem auto;" />
-    </div>
+      <img src="" alt="Congress Member Network" />
+    </section>
 
-    <h2>Dataset Summary</h2>
-    <ul>
-      <li><strong>Total size</strong>: 2.7 GB (unzipped)</li>
-      <li><strong>Date range</strong>: June 21, 2017 – July 11, 2023</li>
-      <li><strong>Files</strong>: 2,197 JSON files (one per day)</li>
-      <li><strong>Tweets</strong>: 5,068,352</li>
-      <li><strong>Fields</strong>: Id, screen_name, user_id, time, link, text, source</li>
-    </ul>
+    <section class="card">
+      <h2>Dataset Summary</h2>
+      <ul>
+        <li><strong>Total size</strong>: 2.7 GB (unzipped)</li>
+        <li><strong>Date range</strong>: June 21, 2017 – July 11, 2023</li>
+        <li><strong>Files</strong>: 2,197 JSON files (one per day)</li>
+        <li><strong>Tweets</strong>: 5,068,352</li>
+        <li><strong>Fields</strong>: Id, screen_name, user_id, time, link, text, source</li>
+      </ul>
+    </section>
 
-    <a class="download-button" href="https://github.com/alexlitel/congresstweets" target="_blank">View Dataset</a>
+    <section class="card">
+      <h2>Preliminary Insights</h2>
+      <ul>
+        <li>Party-line clustering appears in topic co-occurrence networks</li>
+        <li>Hashtag usage often spikes around major political events</li>
+        <li>Sentiment and framing vary significantly across party lines</li>
+      </ul>
+    </section>
 
-    <h2>Preliminary Insights</h2>
-    <ul>
-      <li>Party-line clustering appears in topic co-occurrence networks</li>
-      <li>Hashtag usage often spikes around major political events</li>
-      <li>Sentiment and framing vary significantly across party lines</li>
-    </ul>
-
-    <h2>Go Behind the Scenes</h2>
-    <div class="notebook-preview">
-      <h3>Explainer Notebook</h3>
+    <section class="card notebook-preview">
+      <h3>Go Behind the Scenes</h3>
       <ul>
         <li><a href="" target="_blank">View full analysis in our explainer notebook</a></li>
         <li><a href="https://github.com/cruesli/CSS_group13" target="_blank">See the code on GitHub</a></li>
       </ul>
-    </div>
-  </section>
+    </section>
+  </main>
 </body>
-
 </html>
