Update figure 1 text

--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
     // Glider.js slider for visualizations
     window.addEventListener('DOMContentLoaded', function(){
       const captions = [
-        "1slide caption PLACEHOLDER",
+        "1slide caption: The bar chart compares the mean VADER compound score for each party label in the sample. Democrats (D), Republicans (R), Liberatarians (L), and Independents (I) all cluster between 0.18 and 0.26, signalling slighly positive language overall. Accounts without a part tag (N/A, which are mostly committees or caucuses) show the highest average sentiment, while Indepedents sit lowest. The partisan tone differs, but the gap is modest, nobody is extremely negative or positive",
         "2slide caption PLACEHOLDER",
         "3slide caption PLACEHOLDER",
         "4slide caption PLACEHOLDER",
